apps/sample-nodejs-app/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-nodejs-app-deployment-v1
  namespace: test-app
spec:
  selector:
    matchLabels:
      app: test-nodejs-app
      version: v1
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: nodejs-data
      labels:
        app: test-nodejs-app
        version: v1
    spec:
      serviceAccountName: test-app-sa
      containers:
      - name: test-app
        image: harbor.dorn.gorke.ml/nodejs/sample-app:v0.2.8
        volumeMounts:
        - mountPath: /appdir
          name: nodejs-data
        ports:
        - containerPort: 3000
      volumes:
      - name: nodejs-data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: test-nodejs-app
  namespace: test-app
  labels:
    app: test-nodejs-app
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: test-nodejs-app
  type: LoadBalancer
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: test-app-gateway
  namespace: test-app
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - '*'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtualservice-ingress-test-app
  namespace: test-app
spec:
  hosts:
  - acme.apps.h2o-4-1060.h2o.vmware.com
  gateways:
  - test-app-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: test-nodejs-app
        port:
          number: 80
        subset: v1
      weight: 100
    - destination:
        host: test-nodejs-app
        port:
          number: 80
        subset: v2
      weight: 0
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: test-nodejs-app
  namespace: test-app
spec:
  host: test-nodejs-app
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
